[workspace]

members = [
    "day01/p1/v1",
    "day01/p2/v1",
    "day02/p1/v1",
    "day02/p1/v3",
    "day02/p1/v2",
    "day02/p2/v1",
    "day03/p1/v1",
    "day04/p1/v1",
    "day04/p2/v1",
    "day05/p1/v1",
    "day05/p2/v1",
    "day06/p1/v1",
    "day07/p1/v1",
    "day08/p1/v1",
    "day09/p1/v1",
]
